# MOVsplitter

./: .gitignore  README.md  example_config.yaml  main.py  pyproject.toml  tune_tail.yaml
loading/: loading.mov  title.MOV
param/: loading_template_profile.json  title_template_profile.json
split_mov/: __init__.py  ai_helper.py  cli.py  config.py  cut_table.py  detect.py  features.py  ffmpeg_utils.py  report.py  segment.py  title_ocr.py  utils.py  visualize.py
title_ocr_benchmark_20260323_200829/: split_mov_20260323_titlecheck_OP1_1_v3_easyocr.tsv  split_mov_20260323_titlecheck_OP1_1_v3_tesseract.tsv  split_mov_20260323_titles_013713_easyocr.tsv  split_mov_20260323_titles_013713_tesseract.tsv  summary.tsv
